--- a/BPMn/Readme
+++ b/BPMn/Readme
@@ -1,1 +1,3 @@
 Alle BPMn gerelateerde documenten, bestanden, processen etc.
+
+Alleen nieuwste versies staan hier (om verwarring te voorkomen), voor oude versie raadpleeg Michelle. 
