--- a/documenten/techniek/Notule 25-11-2019.md
+++ b/documenten/techniek/Notule 25-11-2019.md
@@ -2,7 +2,10 @@ Agenda:
 1. Overzicht (wat willen we)                  done
 2. Overzicht (wat hebben we)                  done
 3. Proto component (wat is het/wat doet het)  done
-4. PDC                                        
+4. Definition of ready                        done
+5. Definition of done                         done
+6. PDC                                        Pending
+  6b. offer                                   Pending
 
 - Invulling proces laag
 - Trouwregisteratie
@@ -12,9 +15,36 @@ Agenda:
 - Voorinvullen
 - Notificatie
 - User
+- Contacten
 
 Beslissingen/acties
 1. Design.MD op de vng/huwelijksplanner repo is leidend.
 2. Copy right verwijderen (juist zetten) --> conduction
-3. Constantijn gaat met het implementatie team overleggen hoe de code moet worden overgedragen
+3. Constantijn gaat met het implementatie team overleggen hoe de code moet worden overgedragen inclusief docker etc
 4. Beschikbaarheid PDC bekijken (gedeelde server met de solviteers)
+5. Way of working voorstel: 
+            -We volgen internationale standaarden of leg uit waarom je afwijkt
+            -Userstories zijn de aanleiding om componenten te reviewen en door te lichten
+            -Hoe stellen we een component vast 
+                (definition of ready)
+                1. Wat doet het en hoe verhoud het zicht tot andere componenten (landschap)
+                2. Gegevensmodel
+                3. Er is een common understanding van de te realiseren functionaliteit
+                Als de bovenstaande 2 punten af zijn dan is de story "Ready"
+                ----
+                (Definition of done)
+                1. Oas documentatie
+                2. Postman scripts (test scripts) 
+                3. Aangeleveren testscripts aan de api test voorziening
+                4. Containers moeten gepubliceert zijn
+                5. Gereviewd op de design decisions
+                6. Voorbeeld implementatie beschikbaar
+                7. Redoc moet beschikbaar zijn
+                8. Documentatie moet beschikbaar zijn op github-pages
+6. PDC: producten en diensten zijn technisch het zelfde (een dienst is een product)
+    -Offer: Description toevoegen aan PDC
+    -Offer: Prijs is met een punt
+    -Offer: OfferedBy moet een identificerend gegeven zijn zo als RSIN of zie RSGB en spieken hoe ZGW het heeft gedaan
+    -Offer: TaxArray ruben doet een voorstel
+7.  Vervolg meeting gepland voor vrijdag 29 november
+    
