--- a/documenten/techniek/Notule 25-11-2019.md
+++ b/documenten/techniek/Notule 25-11-2019.md
@@ -42,6 +42,7 @@ Beslissingen/acties
                 6. Voorbeeld implementatie beschikbaar
                 7. Redoc moet beschikbaar zijn
                 8. Documentatie moet beschikbaar zijn op github-pages
+                9. NLX integratie moet werken
                 
 6. PDC: producten en diensten zijn technisch het zelfde (een dienst is een product)
 
